--- a/.github/workflows/rate-joke.yml
+++ b/.github/workflows/rate-joke.yml
@@ -1,3 +1,14 @@
+name: Rate Joke
+run-name: Rate Joke by ${{ github.event.comment.user.login }}
+
+on:
+  issue_comment:
+    types: [created]
+
+permissions:
+  issues: write
+  contents: read
+  models: read
 
 jobs:
   joke:
